--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="title" property="og:title" content="News Finder App" />
+
+    <meta property="og:type" content="Website" />
+
+    <meta
+      name="image"
+      property="og:image"
+      content="https://i.imgur.com/UPhInP4.jpeg"
+    />
+
+    <meta
+      name="description"
+      property="og:description"
+      content="[Content description here]"
+    />
+
+    <meta name="author" content="[Author name here]" />
   </head>
   <body>
     <div id="root"></div>
